--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -36,4 +36,6 @@ dependencies {
     //by viewModels di Activity dan Fragment
     implementation ("androidx.activity:activity-ktx:1.8.2")
     implementation ("androidx.fragment:fragment-ktx:1.6.2")
+
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 }
