--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation ("androidx.fragment:fragment-ktx:1.6.2")
 
     implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+    implementation("com.facebook.shimmer:shimmer:0.5.0")
 }
