--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation("androidx.datastore:datastore-preferences:1.0.0")
 
     implementation("com.facebook.shimmer:shimmer:0.5.0")
+    implementation("androidx.annotation:annotation:1.7.1")
 }
