--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -42,4 +42,5 @@ dependencies {
 
     implementation("com.squareup.leakcanary:leakcanary-android:2.13")
     implementation("com.airbnb.android:lottie:6.3.0")
+    androidTestImplementation("androidx.annotation:annotation:1.7.1")
 }
