--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -41,4 +41,7 @@ dependencies {
 
     implementation("com.squareup.leakcanary:leakcanary-android:2.13")
     implementation("com.airbnb.android:lottie:6.3.0")
+
+    implementation("androidx.annotation:annotation:1.1.0")
+    androidTestImplementation("androidx.annotation:annotation:1.1.0")
 }
