--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -6,8 +6,8 @@ dependencies {
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.7.0")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0")
-    implementation("androidx.navigation:navigation-fragment-ktx:2.7.6")
-    implementation("androidx.navigation:navigation-ui-ktx:2.7.6")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.7.7")
+    implementation("androidx.navigation:navigation-ui-ktx:2.7.7")
     testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
@@ -17,7 +17,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
 
     implementation ("androidx.room:room-ktx:2.6.1")
-    kapt("androidx.room:room-compiler:2.6.1")
+    ksp("androidx.room:room-compiler:2.6.1")
     implementation ("androidx.room:room-runtime:2.6.1")
 
     //glide
@@ -42,6 +42,6 @@ dependencies {
     implementation("com.squareup.leakcanary:leakcanary-android:2.13")
     implementation("com.airbnb.android:lottie:6.3.0")
 
-    implementation("androidx.annotation:annotation:1.1.0")
-    androidTestImplementation("androidx.annotation:annotation:1.1.0")
+    implementation("androidx.annotation:annotation:1.7.1")
+    androidTestImplementation("androidx.annotation:annotation:1.7.1")
 }
